Traefik/gitlab-ce-ingress.yaml
---
# Traefik-Ingress #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: gitlab-ce
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: gitlab.tele-sing.com
    http:
      paths:
      - path:
        backend:
          serviceName: helm-gitlab-ce-gitlab-ce
          servicePort: 80
...
