Traefik/jenkins-ingress.yaml
---
# Traefik-Ingress #
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: jenkins
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  rules:
  - host: jenkins.tele-sing.com
    http:
      paths:
      - path:
        backend:
          serviceName: helm-jenkins
          servicePort: 8080
...
